# TrialGuard

./: .env.example  .gitignore  PHASE0.md  README.md  TrialGuard_Development_Plan.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/reports/: baselines.json  phase2_3_results.md  phase3_agent.json  phase3_agent_trec_2021.json  phase3_agent_trec_2022.json  phase4_agent.md  phase4_agent_sigir.json  phase4v2_agent_sigir.json  phase4v2_agent_trec_2021.json  phase4v2_agent_trec_2022.json  phase4v2_matched_sigir.json  phase4v2_matched_trec_2021.json  phase4v2_matched_trec_2022.json  phase5_vectorstore.json  phase5_vectorstore.md
docs/: IMPROVEMENT_PLAN.md  caching.md  deploy.md  hf_space_README.md  observability.md  walkthrough_script.md
scripts/: bench_vectorstore.py  exp_retrieval.py
src/trialguard/: __init__.py  config.py  demo.py  tracing.py
src/trialguard/agent/: analyst.py  graph.py  ratelimit.py  sanitize.py  schema.py
src/trialguard/db/: schema.py
src/trialguard/eval/: agent_metrics.py  cohorts.py  corpus_loader.py  file_index.py  regression_gate.py  retrieval_metrics.py  significance.py
src/trialguard/ingestion/: ctgov.py  embed.py  loader.py  normalise.py
src/trialguard/retrieval/: bm25.py  dense.py  fusion.py  pipeline.py  query_transform.py  rerank.py
src/trialguard/scripts/: eval_retrieval.py  ingest.py  load_eval_corpus.py
src/trialguard/verify/: grounding.py
tests/: test_agent_graph.py  test_config.py  test_demo.py  test_grounding.py  test_normalise.py  test_observability.py  test_prompts.py  test_ratelimit.py  test_regression_gate.py  test_retrieval.py  test_security.py  test_significance.py
tests/fixtures/: grounding_golden.json
